--- a/StareMedic/Views/Pacientes.xaml
+++ b/StareMedic/Views/Pacientes.xaml
@@ -51,15 +51,15 @@
 
                                     <Label 
                                     Text="{Binding Path=Id, StringFormat='ID: {0} '}"
-                                    FontFamily="OpenSansRegular"
+                                    FontFamily="HelveticaNeue"
                                     TextColor="{StaticResource Alter2}"
-                                    FontSize="15"
+                                    FontSize="15"                                   
                                     HorizontalOptions="StartAndExpand"
                                     HorizontalTextAlignment="Start"/>
 
                                     <Label 
                                     Text="{Binding Nombre, StringFormat='Nombre: {0} '}"
-                                    FontFamily="OpenSansRegular"
+                                    FontFamily="HelveticaNeue"
                                     FontSize="15"
                                     TextColor="{StaticResource Black}"
                                     HorizontalOptions="StartAndExpand"
@@ -89,9 +89,11 @@
                                HorizontalOptions="End">
             <Button Text="&lt;"
                     x:Name="BtnPrevListPage"
+                    FontFamily="HelveticaNeue"
                     Clicked="BtnPrevListPage_Clicked"/>
             <Button Text=">"
                     x:Name="BtnNextListPage"
+                    FontFamily="HelveticaNeue"
                     Clicked="BtnNextListPage_Clicked"/>
 
         </HorizontalStackLayout>
@@ -112,6 +114,7 @@
             <SearchBar x:Name="SearchBarPatients"
                         VerticalOptions="Start"
                         Placeholder="Buscar Paciente"
+                        FontFamily="HelveticaNeue"
                         Background="{StaticResource Alter1}"
                         CancelButtonColor="{StaticResource Alter2}"
                         SearchButtonPressed="SearchBarPatients_SearchButtonPressed"
@@ -126,7 +129,7 @@
 
             <Image 
                 Grid.Row="1"
-                Source="logo_hospital.png"
+                Source="logo.png"
                 VerticalOptions="Center"
                 HorizontalOptions="Center"
                 HeightRequest="200"/>
@@ -143,6 +146,7 @@
                     HorizontalOptions="Start"
                     MinimumWidthRequest="160"
                     Grid.Row="1"
+                    FontFamily="HelveticaNeue"
                     x:Name="btnCancel"
                     Clicked="BtnCancel_Clicked"
                     BackgroundColor="{StaticResource Alter2}"
@@ -171,6 +175,7 @@
                     HorizontalOptions="End"
                     MinimumWidthRequest="160"                  
                     Grid.Row="1"
+                    FontFamily="HelveticaNeue"
                     x:Name="BtnAddPatient"
                     Clicked="BtnAddPatient_Clicked"
                     BackgroundColor="{StaticResource Alter2}"
