--- a/StareMedic/Views/Viewers/ViewClinicalCase.xaml
+++ b/StareMedic/Views/Viewers/ViewClinicalCase.xaml
@@ -26,6 +26,7 @@
                 x:Name="LblName" 
                 Text="Admision ID:"
                 FontSize="Title"
+                FontFamily="HelveticaNeue"
                 TextColor="{StaticResource Alter2}"
                 HorizontalOptions="Start"/>
 
@@ -46,6 +47,7 @@
                                 Grid.Column="0"
                                 Grid.Row="0"
                                 FontSize="Subtitle"
+                                FontFamily="HelveticaNeue"
                                 VerticalOptions="Center"
                                 TextColor="{StaticResource Alter2}"
                                 HorizontalOptions="Start"/>
@@ -53,14 +55,16 @@
                                  x:Name="LblFolioSDK"
                                  Grid.Column="1"
                                  Grid.Row="0"
-                                  HorizontalOptions="Start"
+                                 FontFamily="HelveticaNeue"
+                                 HorizontalOptions="Start"
                                  VerticalOptions="Center"
                                  TextColor="{StaticResource Black}"/>
                     <Button Text="Enviar"
                                     x:Name="BtnSendSDK"
                                     HorizontalOptions="EndAndExpand"
                                     Grid.Column="2"      
-                                     Grid.Row="0"
+                                    FontFamily="HelveticaNeue"
+                                    Grid.Row="0"
                                     TextColor="{StaticResource Principal}"
                                     BackgroundColor="{StaticResource Alter1}"
                                     Clicked="BtnSendSDK_Clicked">
@@ -125,6 +129,7 @@
                     <Picker x:Name="PickMedic"
                             HorizontalOptions="CenterAndExpand"
                             VerticalOptions="CenterAndExpand"
+                            FontFamily="HelveticaNeue"
                             BackgroundColor="{StaticResource Alter1}"                 
                             WidthRequest="400"
                             IsEnabled="False">
@@ -138,6 +143,7 @@
                            Style="{StaticResource labelEntry}"/>
                     <Picker x:Name="PickRoom"
                             HorizontalOptions="Center"
+                            FontFamily="HelveticaNeue"
                             VerticalOptions="Center"
                             BackgroundColor="{StaticResource Alter1}"
                             WidthRequest="400"
@@ -158,6 +164,7 @@
                            Style="{StaticResource labelEntry}"/>
 
                     <DatePicker x:Name="DateIngreso"
+                                FontFamily="HelveticaNeue"
                                 BackgroundColor="{StaticResource Alter1}"
                                 WidthRequest="250"
                                 IsEnabled="False"/>
@@ -184,6 +191,7 @@
                             Grid.Column="1"                          
                             VerticalOptions="Center"
                             x:Name="RadioMedico"
+                            FontFamily="HelveticaNeue"
                             BackgroundColor="{StaticResource Alter1}"
                             CornerRadius="20"
                             FontSize="Medium"         
@@ -196,6 +204,7 @@
                             Grid.Column="2"
                             HorizontalOptions="Start"
                             x:Name="RadioQuirurgico"
+                            FontFamily="HelveticaNeue"
                             BackgroundColor="{StaticResource Alter1}"
                             CornerRadius="20"
                             FontSize="Medium"
@@ -208,6 +217,7 @@
                             Grid.Column="3"
                             HorizontalOptions="Start"
                             x:Name="RadioObstetrico"
+                            FontFamily="HelveticaNeue"
                             FontSize="Medium"
                             BackgroundColor="{StaticResource Alter1}"
                             CornerRadius="20"
@@ -230,6 +240,7 @@
                             BackgroundColor="{StaticResource Alter1}"
                             HorizontalTextAlignment="Start"
                             HorizontalOptions="FillAndExpand" 
+                            FontFamily="HelveticaNeue"
                             TextColor="{StaticResource Black}"
                             VerticalOptions="CenterAndExpand"
                             HeightRequest="100"
@@ -266,6 +277,7 @@
                             TextColor="{StaticResource Principal}"
                             Text="Regresar"
                             WidthRequest="100"
+                            FontFamily="HelveticaNeue"
                             HeightRequest="50"
                             Grid.Column="0"
                             HorizontalOptions="Start"
@@ -291,6 +303,7 @@
                             Grid.Column="2"
                             HorizontalOptions="Start"
                             VerticalOptions="End"
+                            FontFamily="HelveticaNeue"
                             WidthRequest="300"
                             HeightRequest="50"
                             IsVisible="True"
@@ -318,6 +331,7 @@
                             Text="Editar Diagnostico"
                             HeightRequest="50"
                             WidthRequest="150"
+                            FontFamily="HelveticaNeue"
                             Grid.Column="5"
                             HorizontalOptions="Start"
                             BackgroundColor="{StaticResource Alter2}"
@@ -341,6 +355,7 @@
                     <Button x:Name="BtnEdit"
                             Text="Editar Admision"
                             HeightRequest="50"
+                            FontFamily="HelveticaNeue"
                             Grid.Column="6"
                             HorizontalOptions="Start"
                             BackgroundColor="{StaticResource Alter2}"
@@ -365,6 +380,7 @@
                             Text="Eliminar"
                             HeightRequest="50"
                             Grid.Column="7"
+                            FontFamily="HelveticaNeue"
                             HorizontalOptions="EndAndExpand"
                             BackgroundColor="{StaticResource Alter2}"
                             TextColor="{StaticResource Principal}"
@@ -390,6 +406,7 @@
                                 IsVisible="False"
                                 IsEnabled="False"
                                 Grid.Column="2"
+                                FontFamily="HelveticaNeue"
                                 WidthRequest="125"
                                 HeightRequest="50"
                                 BackgroundColor="{StaticResource Alter2}"
@@ -417,6 +434,7 @@
                                 IsVisible="false"
                                 IsEnabled="false"
                                 HeightRequest="50"
+                                FontFamily="HelveticaNeue"
                                 WidthRequest="125"
                                 BackgroundColor="{StaticResource Alter2}"
                                 TextColor="{StaticResource Principal}"
@@ -442,6 +460,7 @@
                         <Button x:Name="BtnSaveAll"
                             Text="Guardar Cambios"
                             IsVisible="False"
+                            FontFamily="HelveticaNeue"
                             IsEnabled="False"
                             HeightRequest="50"
                             WidthRequest="150"
@@ -470,6 +489,7 @@
                             Text="Cancelar Cambios"
                             IsVisible="False"
                             IsEnabled="False"
+                            FontFamily="HelveticaNeue"
                             HeightRequest="50"
                             WidthRequest="150"
                             BackgroundColor="{StaticResource Alter2}"
