--- a/StareMedic/Views/Doctores.xaml
+++ b/StareMedic/Views/Doctores.xaml
@@ -54,7 +54,7 @@
                                         Grid.Column="0"
                                         Grid.Row="0"
                                         Text="{Binding Path=Id, StringFormat='ID: {0} '}"
-                                        FontFamily="OpenSansRegular"
+                                        FontFamily="HelveticaNeue"
                                         TextColor="{StaticResource Alter2}"
                                         FontSize="15"
                                         HorizontalOptions="StartAndExpand"
@@ -65,7 +65,7 @@
                                         Grid.Column="0"
                                         Grid.Row="1"
                                         Text="{Binding Nombre, StringFormat='Nombre: {0} '}"
-                                        FontFamily="OpenSansRegular"
+                                        FontFamily="HelveticaNeue"
                                         FontSize="15"
                                         TextColor="{StaticResource Black}"
                                         HorizontalOptions="StartAndExpand"
@@ -95,9 +95,11 @@
                                HorizontalOptions="End">
             <Button Text="&lt;"
                     x:Name="BtnPrevListPage"
+                    FontFamily="HelveticaNeue"
                     Clicked="BtnPrevListPage_Clicked"/>
             <Button Text=">"
                     x:Name="BtnNextListPage"
+                    FontFamily="HelveticaNeue"
                     Clicked="BtnNextListPage_Clicked"/>
 
         </HorizontalStackLayout>
@@ -117,6 +119,7 @@
             <SearchBar x:Name="SearchBarMedics"
                        VerticalOptions="Start"
                        Placeholder="Buscar Medico"
+                       FontFamily="HelveticaNeue"
                        Background="{StaticResource Alter1}"                    
                        SearchButtonPressed="SearchBarMedics_SearchButtonPressed"
                        TextChanged="SearchBarMedics_TextChanged"
@@ -126,7 +129,7 @@
                        MaximumHeightRequest="60"/>
 
             <Image Grid.Row="1"
-                   Source="logo_hospital.png"
+                   Source="logo.png"
                    VerticalOptions="Center"
                    HorizontalOptions="Center"
                    HeightRequest="200">
@@ -146,6 +149,7 @@
                     HorizontalOptions="Start"
                     MinimumWidthRequest="160"
                     x:Name="btnCancel"
+                    FontFamily="HelveticaNeue"
                     Clicked="btnCancel_Clicked"
                     Text="Volver"
                     TextColor="{StaticResource Principal}"
@@ -172,6 +176,7 @@
                     HorizontalOptions="End"
                     MinimumWidthRequest="160"
                     Grid.Row="1"
+                    FontFamily="HelveticaNeue"
                     x:Name="BtnAddMedic"
                     Clicked="BtnAddMedic_Clicked"
                     BackgroundColor="{StaticResource Alter2}"
